--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,227 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Playwrite+DK+Loopet:wght@100..400&display=swap');
+/* font-family: "Playwrite DK Loopet", cursive; */
+/* font-family: "Inter", sans-serif; */
+
+*{
+    font-family: "Inter", sans-serif;
+}
+
+
+/* common design */
+.full-size{
+    width: 100%;
+    background-color: rgb(17, 17, 17);
+}
+.disply-flex{
+    display: flex;
+}
 p{
-    background-color: aliceblue;
-    font-family: 'Courier New', Courier, monospace;
+    width: 70%;
+    height: 48px;
+    padding: 0;
+    font-size: 0.9rem;
+    font-weight: 400;
+}
+.average-size{
+    width: 80%;
+    /* border: 2px solid red; */
+    margin: auto;
+}
+.primary-btn{
+    width:220px;
+    height: 48px;
+    padding: 14px 35px 14px 34px;
+    margin: 0 13px;
+    background-color: rgb(230, 83, 60);
+    border-radius: 25px;
+    border: none;
+    color: white;
+    font-size: 1.1rem;
+    font-weight: 600;
+    margin-left: 0;
+}
+.color-1{
+    color: rgb(255, 255, 255);
+}
+.color-2{
+    color: rgba(255, 255, 255, 0.5);
+}
+.color-3{
+    color: rgb(230, 83, 60);
+}
+.video{
+    box-sizing: border-box;
+    border-radius: 6px;
+    width: 176px;
+    height: 78px;
+    background:rgba(255, 255, 255, 0.1);
+    border: 1px solid rgba(255, 255, 255, 0.1);
+    backdrop-filter: blur(10px);
+    position: absolute;
+    text-align: center;
+}
+
+/* Header section design */
+.banner{
+    width: 100%;
+    margin-top: 4rem;
+}
+
+.header{
+    display: flex;
+    height: 2rem;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 15px;
+}
+.banner h3{
+    font-size: 2rem;
     font-weight: 800;
+}
+.header nav > ul{
+    display: flex;
+    gap: 15px;
+}
+nav > ul > li > a{
+    text-decoration: none;
+    color: rgb(255, 255, 255);
+}
+nav > ul > li{
+    list-style: none;
+}
+#menu-bar{
+    display: none;
+}
+#home{
+    /* border: 2px solid red; */
+    background-color: rgb(230, 83, 60);
+    padding: 2px;
+    /* margin-bottom:20px; */
+    width: 5rem;
+    height: 1.25rem;
+    text-align: center;
+    align-items: center;
+    border-radius: 25px;
+}
+.header-content h1{
+    width: 70%;
+    height: 280px;
+    margin-bottom: 0px;
+    margin-bottom: 2rem;
+    padding: 0;
+    font-size: 4.25rem;
+    font-weight: 900;
+    /* border: 2px solid green; */
+}
+.header-content p{
+    margin-bottom: 2rem;
+}
+#miama-font{
+    font-family: "Playwrite DK Loopet", cursive;
+    color: rgb(230, 83, 60);
+}
+#secondary-btn{
+    background-color: rgb(17, 17, 17);
+    box-sizing: border-box;
+    border: 1px solid rgb(255, 255, 255);
+}
+#circle{
+    background-color: rgb(230, 83, 60);
+    border-radius: 50%;
+    height: 27%;
+    margin: 0 auto;
+    width: 20px;
+    align-items: centers;
+    text-align: center;
+    padding: auto;
+}
+#circle i{
+    margin: 0 auto;
+}
+#free{
+    margin-top: -420px;
+    margin-left: 220px;
+}
+#paid{
+    margin-top: -115px;
+    margin-left: -70px;
+}
+.video > h4{
+    margin: 0 auto;
+    margin-top: 4px;
+}
+.video p{
+    margin: 0 auto;
+}
+.content-1{
+    /* border: 2px solid wheat; */
+    width: 70%;
+    height: auto;
+}
+.content-2{
+    /* border: 2px solid wheat; */
+    width: 30%;
+    height: auto;
+}
+.content-1 > p{
+    margin-top: 15px;
+    margin-bottom: 35px;
+}
+
+
+/* design for small device */
+
+@media screen and (max-width: 576px) {
+    .header-content{
+        flex-direction: column;
+    }
+    .primary-btn{
+        width:40%;
+        padding: 7px 15px 7px 15px;
+        margin: 0 18px;
+        font-size: 1rem;
+        font-weight: 500;
+    }
+    .video{
+        width: 140px;}
+    p{
+        width: 80%;
+        height: 2rem;
+        padding: 0;
+        font-size: 0.9rem;
+        font-weight: 300;
+        margin-bottom: 100px;
+    }
+    
+    #menu-bar{
+        display: block;
+    }
+    .menu-item{
+        display: none;
+    }
+    .average-size{
+        width: 90%;
+    }
+    .content-1{
+        width: 100%;
+    }
+    .content-1 h1{
+        width: 70%;
+        font-size: 2rem;
+        font-weight: 700;
+        height: auto;
+    }
+    .content-2{
+        padding-left: 40px;
+    }
+    #paid{
+        margin-top: -350px;
+        margin-left: -20px;
+    }
+    #free{
+        margin-top: -540px;
+        margin-left: 200px;
+    }
+    
 }
