--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Playwrite+DK+Loopet:wght@100..400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Edu+VIC+WA+NT+Beginner:wght@400..700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
 /* font-family: "Playwrite DK Loopet", cursive; */
 /* font-family: "Inter", sans-serif; */
+/* font-family: "Edu VIC WA NT Beginner", cursive; */
 
 *{
     font-family: "Inter", sans-serif;
@@ -52,6 +53,7 @@ p{
 }
 .video{
     box-sizing: border-box;
+    padding-top: 7px;
     border-radius: 6px;
     width: 176px;
     height: 78px;
@@ -118,7 +120,7 @@ nav > ul > li{
     margin-bottom: 2rem;
 }
 #miama-font{
-    font-family: "Playwrite DK Loopet", cursive;
+    font-family: "Playfair Display", serif;
     color: rgb(230, 83, 60);
 }
 #secondary-btn{
@@ -126,18 +128,10 @@ nav > ul > li{
     box-sizing: border-box;
     border: 1px solid rgb(255, 255, 255);
 }
-#circle{
-    background-color: rgb(230, 83, 60);
-    border-radius: 50%;
-    height: 27%;
+
+#play-btn{
     margin: 0 auto;
-    width: 20px;
-    align-items: centers;
-    text-align: center;
-    padding: auto;
-}
-#circle i{
-    margin: 0 auto;
+    color: rgb(230, 83, 60);
 }
 #free{
     margin-top: -420px;
@@ -173,18 +167,26 @@ nav > ul > li{
 /* design for small device */
 
 @media screen and (max-width: 576px) {
+    /* first page design */
+    .full-size{
+        width: 98%;
+        margin: 0 auto;
+    }
     .header-content{
         flex-direction: column;
     }
     .primary-btn{
-        width:40%;
-        padding: 7px 15px 7px 15px;
-        margin: 0 18px;
-        font-size: 1rem;
+        width:45%;
+        padding: 7px;
+        margin: 15px 5px;
+        font-size: 0.9rem;
         font-weight: 500;
     }
     .video{
-        width: 140px;}
+        height: 58px;
+        width: 120px;
+        padding-top: 0;
+    }
     p{
         width: 80%;
         height: 2rem;
@@ -213,15 +215,21 @@ nav > ul > li{
         height: auto;
     }
     .content-2{
-        padding-left: 40px;
+        padding-left: 60px;
+    }
+    .content-2 > img{
+        height: 450px;
     }
     #paid{
-        margin-top: -350px;
-        margin-left: -20px;
+        margin-top: -250px;
+        margin-left: -40px;
     }
     #free{
-        margin-top: -540px;
-        margin-left: 200px;
+        margin-top: -400px;
+        margin-left: 150px;
+    }
+    #circle{
+        height: 30%;
     }
     
 }
