--- a/styles/style.css
+++ b/styles/style.css
@@ -18,9 +18,6 @@
     display: flex;
 }
 p{
-    width: 70%;
-    height: 48px;
-    padding: 0;
     font-size: 0.9rem;
     font-weight: 400;
 }
@@ -28,6 +25,9 @@ p{
     width: 80%;
     /* border: 2px solid red; */
     margin: auto;
+}
+.center{
+    text-align: center;
 }
 .primary-btn{
     width:220px;
@@ -62,6 +62,12 @@ p{
     backdrop-filter: blur(10px);
     position: absolute;
     text-align: center;
+}
+.circle-img{
+    border-radius: 50%;
+}
+.auto-margin{
+    margin: 0 auto;
 }
 
 /* Header section design */
@@ -116,7 +122,10 @@ nav > ul > li{
     font-weight: 900;
     /* border: 2px solid green; */
 }
-.header-content p{
+#header-para{
+    width: 70%;
+    height: 48px;
+    padding: 0;
     margin-bottom: 2rem;
 }
 #miama-font{
@@ -163,16 +172,60 @@ nav > ul > li{
     margin-bottom: 35px;
 }
 
+/* second page design */
 
+.second-title{
+    width: 650px;
+    height: 110px;
+    /* border: 2px solid white; */
+    margin: 100px auto;
+}
+.img-section{
+    /* border: 2px solid gray; */
+    justify-content: space-between;
+    /* height: 350px; */
+}
+.content-box{
+    padding-top: 0px;
+    /* border: 2px solid red; */
+    width: 220px;
+    height: 100px;
+    margin: 20px auto;
+}
+.second-title h3{
+    margin-bottom: 20px;
+    font-size: 3rem;
+    font-weight: 900;
+}
+.img-section h5{
+    /* border: 2px solid green; */
+    font-size: 1.1rem;
+    font-weight: 600;
+    margin-top: 0px;
+    margin-bottom: 0px;
+}
+.img-section p{
+    margin-top: 10px;
+}
+.img-container{
+    /* border: 2px solid white; */
+    text-align: center;
+    height: 330px;
+    width: 250px;
+}
 /* design for small device */
 
 @media screen and (max-width: 576px) {
     /* first page design */
     .full-size{
-        width: 98%;
+        width: 95%;
         margin: 0 auto;
     }
-    .header-content{
+    .average-size{
+        width: 90%;
+    }
+    .header-content,
+    .img-section{
         flex-direction: column;
     }
     .primary-btn{
@@ -202,9 +255,6 @@ nav > ul > li{
     .menu-item{
         display: none;
     }
-    .average-size{
-        width: 90%;
-    }
     .content-1{
         width: 100%;
     }
@@ -221,7 +271,7 @@ nav > ul > li{
         height: 450px;
     }
     #paid{
-        margin-top: -250px;
+        margin-top: -150px;
         margin-left: -40px;
     }
     #free{
@@ -230,6 +280,33 @@ nav > ul > li{
     }
     #circle{
         height: 30%;
+    }
+    /* second page design */
+    .second-title{
+        width: 100%;
+        height: 130px;
+        text-align: center;
+        margin: 40px auto;
+        margin-top: 0;
+    }
+    .img-container{
+        margin:5px auto;
+    }
+    .second-title h3{
+        font-size: 2.5rem;
+    }
+    .second-title p{
+        /* border: 2px solid red; */
+        width: 100%;
+        height: 60px;
+    }
+    .img-section{
+        width: 350px;
+        margin: 0 auto;
+    }
+    .img-container{
+        height: 330px;
+        width: 350px;
     }
     
 }
