--- a/styles/style.css
+++ b/styles/style.css
@@ -45,6 +45,20 @@ p{
     font-weight: 600;
     margin-left: 0;
 }
+.mouse:hover{
+    cursor: pointer;
+    color: pink;
+}
+.input{
+    height: 40px;
+    width: 300px;
+    margin:10px 10px 10px 0px;
+    border-radius: 8px;
+    color: rgba(255, 255, 255, 0.4);
+    background: rgba(255, 255, 255, 0.1);
+    border: none;
+    padding-left: 10px;
+}
 .color-1{
     color: rgb(255, 255, 255);
 }
@@ -91,7 +105,13 @@ p{
     font-weight: 800;
 }
 .header nav > ul{
+    height: 35px;
+    margin-top: 40px;
+    box-sizing: border-box;
+    border: 1px solid rgba(255, 255, 255, 0.1);
+    border-radius: 39px;
     display: flex;
+    align-items: center;
     gap: 15px;
 }
 nav > ul > li > a{
@@ -236,7 +256,9 @@ nav > ul > li{
 }
 #runner-container img{
     height: 330px;
-    width: 300px;
+    width: 450px;
+    object-fit: none;
+    object-position: 69% 34%;
     border-radius: 18px;
     margin: 35px 40px;
     /* border: 2px solid green; */
@@ -257,6 +279,64 @@ nav > ul > li{
 
 }
 
+/* BMI Calculator section design */
+
+.bmi-section{
+    background: rgb(34, 34, 34);
+    height: 480px;
+    border-radius: 3px;
+}
+#bmi-calc{
+    /* border: 2px solid white; */
+    height: 360px;
+    padding-top: 50px;
+}
+.table-container{
+    width: 45%;
+    /* border: 2px solid rebeccapurple; */
+}
+.table-container h2{
+    width: 90%;
+    height: 30px;
+    font-size: 1.75rem;
+    font-weight: 900;
+    text-align: left;
+    /* border: 2px solid white; */
+}
+td{
+    border: 1px solid rgba(255, 255, 255, 0.1);
+    height: 30px;
+    width: 200px;
+    font-size: 0.875rem;
+    font-weight: 400;
+}
+table{
+    border-collapse: collapse;
+    margin-top: 70px;
+}
+.calculate-section{
+    width: 55%;
+    /* border: 2px solid red; */
+}
+.calculate-section h3{
+    font-size: 1.875rem;
+    font-weight: 900;
+}
+#bmi-information{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    /* border: 2px solid green; */
+}
+#option{
+    width: 95%;
+}
+.calculate-section button{
+    margin-top: 30px;
+    margin-left: 0px;
+    font-size: 1.175rem;
+    font-weight: 700;
+}
+
 /* design for small device */
 
 @media screen and (max-width: 576px) {
@@ -270,7 +350,9 @@ nav > ul > li{
     }
     .header-content,
     .img-section,
-    #runner-container{
+    #runner-container,
+    #bmi-calc
+    {
         flex-direction: column;
     }
     .primary-btn{
@@ -374,9 +456,37 @@ nav > ul > li{
     #runner-container img{
         width: 90%;
         height: 200px;
+        /* object-position: 5% 50%; */
         margin:0 auto;
         margin-bottom: 20px;
         padding: 0;
     }
 
+    /* bmi calculator */
+
+    .bmi-section{
+        height: 800px;
+    }
+    .table-container{
+        width: 90%;
+    }
+    .calculate-section{
+        width: 100%;
+    }
+    .calculate-section p{
+        margin-bottom: 30px;
+    }
+    .input{
+        height: 36px;
+        width: 200px;
+        /* margin:10px 10px 10px 0px; */
+        border-radius: 8px;
+        padding-left: 10px;
+    }
+    #first-selection{
+        width: 215px;
+    }
+    #option{
+        width: 100%;
+    }
 }
