--- a/styles/style.css
+++ b/styles/style.css
@@ -90,7 +90,7 @@ p{
 /* Header section design */
 .banner{
     width: 100%;
-    margin-top: 4rem;
+    margin-top: 1.5rem;
 }
 
 .header{
@@ -257,8 +257,6 @@ nav > ul > li{
 #runner-container img{
     height: 330px;
     width: 450px;
-    object-fit: none;
-    object-position: 69% 34%;
     border-radius: 18px;
     margin: 35px 40px;
     /* border: 2px solid green; */
@@ -424,6 +422,65 @@ table{
 #trainer-6{
     background-image: url(../images/trainer6.png);
 }
+
+/* Login form design */
+
+form{
+    border: 0.01px solid rgb(0, 0, 0);
+    height: 600px;
+    margin: 50px auto;
+    background-image: url(../images/login-image.jpg);
+    background-size: cover;
+    background-repeat: no repeat;
+}
+.login-form{
+    width: 50%;
+    height: 400px;
+    margin: 100px auto;
+    backdrop-filter: blur(20px);
+    border-radius: 18px;
+    box-shadow: 1.5em 1.5em 1.5em rgba(0, 0, 0, 0.2);
+    padding-top: 5px;
+}
+.login-form> h1{
+    /* border: 2px solid white; */
+    text-align: center;
+    margin-left: 0px;
+    font-size: 2.5rem;
+    margin: 20px auto;
+}
+.login-btn{
+    width:120px;
+    height: 50px;
+    padding: 12px 20px 12px 20px;
+    margin: 20px 378px 10px 0px;
+    background: rgba(255, 255, 255, 0.5);
+    border-radius: 9px;
+    border: none;
+    color: rgba(51, 46, 46, 0.708);
+    font-size: 1.1rem;
+    font-weight: 500;
+    /* margin-left: 0; */
+}
+.input-form{
+    height: 50px;
+    width: 90%;
+    border-radius: 9px;
+    background: rgba(255, 255, 255, 0.5);
+    border: none;
+    padding-left: 10px;
+}
+#information{
+    padding-left: 60px;
+    /* border: 2px solid red; */
+}
+#sign-up{
+    margin-top: 0;
+}
+a{
+    color: blue;
+}
+
 /* design for small device */
 
 @media screen and (max-width: 576px) {
@@ -604,5 +661,57 @@ table{
     }
     #trainer-heading p{
         width: 100%;
+    }
+
+    /* Login form design */
+
+    form{
+        height: 750px;
+        margin-top: 300px;
+    }
+    #full-form{
+        margin: 30px auto;
+        border-radius: 12px;
+    }
+    .login-form{
+        width: 90%;
+        height: 600px;
+        margin: 75px auto;
+    }
+    .login-form> h1{
+        font-size: 2rem;
+        margin: 20px auto;
+        padding-top: 90px;
+    }
+    .login-btn{
+        width:45%;
+        padding: 7px;
+        margin: 15px 58PX 15px 0PX;
+        font-size: 0.9rem;
+        font-weight: 500;
+    }
+    .input-form{
+        height: 50px;
+        width: 90%;
+        border-radius: 9px;
+        background: rgba(255, 255, 255, 0.5);
+        border: none;
+        padding-left: 10px;
+    }
+    #information{
+        padding-left: 30px;
+        height: 340px;
+    }
+    #information > p{
+        width: 90%;
+        margin-bottom: 5px;
+        margin-top: 10px;
+        height: 15px;
+    }
+    #sign-up{
+        margin-top: 0;
+    }
+    a{
+        color: rgb(71, 197, 255);
     }
 }
