--- a/styles/style.css
+++ b/styles/style.css
@@ -697,7 +697,7 @@ a{
     }
     .input{
         height: 36px;
-        width: 12.5rem;
+        width: 12rem;
         /* margin:10px 10px 10px 0px; */
         border-radius: 8px;
         padding-left: 10px;
@@ -720,6 +720,7 @@ a{
     }
     .trainer-img{
         /* border: 2px solid red; */
+        background-size: cover;
         height: 21.875rem;
         width: 90%;
     }
@@ -759,7 +760,8 @@ a{
     .login-btn{
         width:45%;
         padding: 7px;
-        margin: 15px 58PX 15px 0PX;
+        margin: 15px 0px 15px 0px;
+        margin-right: 3.625rem;
         font-size: 0.9rem;
         font-weight: 500;
     }
@@ -775,6 +777,11 @@ a{
         padding-left: 30px;
         height: 340px;
     }
+    #fitness-paragraph{
+        width: 100%;
+        height: 5rem;
+        border: 2px solid red;
+    }
     #information > p{
         width: 90%;
         margin-bottom: 5px;
@@ -783,6 +790,8 @@ a{
     }
     #sign-up{
         margin-top: 0;
+        border: 2px solid red;
+        width: 100%;
     }
     a{
         color: rgb(71, 197, 255);
