--- a/styles/style.css
+++ b/styles/style.css
@@ -362,7 +362,7 @@ table{
     /* border: 2px solid red; */
 }
 #trainer-heading h2{
-    font-size: 2.9rem;
+    font-size: 2.5rem;
     font-weight: 900;
     margin: 0;
 }
@@ -476,6 +476,7 @@ form{
 }
 #sign-up{
     margin-top: 0;
+    font-size: 0.9rem;
 }
 a{
     color: blue;
@@ -697,32 +698,30 @@ a{
     }
     .input{
         height: 36px;
-        width: 12rem;
+        width: 155px;
         /* margin:10px 10px 10px 0px; */
         border-radius: 8px;
         padding-left: 10px;
     }
     #first-selection{
-        width: 13.4375rem;
-    }
-    #option{
-        width: 101%;
+        width: 165px;
+        /* border: 2px solid red; */
     }
 
     /* trainer section design */
 
     #trainer-img-section{
-        height: 140.625rem;
+        height: 2250px;
     }
-    #trainer-img-section{
+    /* #trainer-img-section{
         gap: 20px;
         padding: 25px;
-    }
+    } */
     .trainer-img{
         /* border: 2px solid red; */
         background-size: cover;
-        height: 21.875rem;
-        width: 90%;
+        height: 350px;
+        width: 100%;
     }
     .display-grid{
         grid-template-columns: repeat(1, 1fr);
@@ -734,7 +733,7 @@ a{
         width: 100%;
     }
     #option{
-        width: 93%;
+        width: 100%;
     }
 
     /* Login form design */
@@ -749,19 +748,20 @@ a{
     }
     .login-form{
         width: 90%;
-        height: 600px;
+        height: 500px;
         margin: 75px auto;
     }
     .login-form> h1{
         font-size: 2rem;
         margin: 20px auto;
-        padding-top: 90px;
+        padding-top: 50px;
     }
     .login-btn{
         width:45%;
+        /* border: 2px solid red; */
         padding: 7px;
         margin: 15px 0px 15px 0px;
-        margin-right: 3.625rem;
+        margin-right: 10px;
         font-size: 0.9rem;
         font-weight: 500;
     }
@@ -778,9 +778,9 @@ a{
         height: 340px;
     }
     #fitness-paragraph{
-        width: 100%;
-        height: 5rem;
-        border: 2px solid red;
+        width: 90%;
+        height: 80px;
+        /* border: 2px solid red; */
     }
     #information > p{
         width: 90%;
@@ -790,10 +790,11 @@ a{
     }
     #sign-up{
         margin-top: 0;
-        border: 2px solid red;
+        /* border: 2px solid red; */
         width: 100%;
     }
     a{
+        font-size: 0.9rem;
         color: rgb(71, 197, 255);
     }
     /* footer section design */
