--- a/styles/style.css
+++ b/styles/style.css
@@ -677,7 +677,10 @@ a{
     }
 
     /* bmi calculator */
-    
+    .about-bmi-calculator > h3{
+        /* border: 2px solid red; */
+        font-size: 2rem;
+    }
     .about-bmi-calculator{
         width: 90%;
     }
@@ -698,19 +701,21 @@ a{
     }
     .input{
         height: 36px;
-        width: 155px;
+        width: 145px;
         /* margin:10px 10px 10px 0px; */
         border-radius: 8px;
         padding-left: 10px;
     }
     #first-selection{
-        width: 165px;
+        width: 155px;
         /* border: 2px solid red; */
     }
 
     /* trainer section design */
 
     #trainer-img-section{
+        /* width: 100%; */
+        padding: 10px;
         height: 2250px;
     }
     /* #trainer-img-section{
@@ -733,7 +738,7 @@ a{
         width: 100%;
     }
     #option{
-        width: 100%;
+        width: 101%;
     }
 
     /* Login form design */
